--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -10,8 +10,8 @@
 @MISC{fmSignalkunde,
   author = "Detlef Mietke",
   title = "Frequenzmodulation",
-  howpublished = "http://elektroniktutor.de/signalkunde/fm.html",
-  year = "Aufgerufen am 31.05.2015, 16:26 Uhr"
+  howpublished = {ttp://elektroniktutor.de/signalkunde/fm.html},
+  year = "Stand 31.05.2015"
   }
 
 @Book{soundofinnovation,
@@ -26,15 +26,15 @@ number = "978-0-262-02876-9"
 @MISC{fatherofdigitalmusik,
   author = "Zachary Crockett",
   title = "The Father of the Digital Synthesizer",
-  howpublished = "http://priceonomics.com/the-father-of-the-digital-synthesizer/",
-  year = "23.03.2015"
+  howpublished = {http://priceonomics.com/the-father-of-the-digital-synthesizer/},
+  year = "Stand 23.03.2015"
   }
 
 @Misc{fmGS1,
   author = "Markus Fiedler ",
   title = "Die FM-Synthese, Ein Überblick",
-  howpublished = "http://www.markus-fiedler.de/fm/fm.html",
-  year = "2001"
+  howpublished = {http://www.markus-fiedler.de/fm/fm.html},
+  year = "Stand 09.06.2015"
   }
 
 @Book{fmtheory,
@@ -56,9 +56,10 @@ year = "1981"
 @Misc{phasenhub,
 author = "Klaus Lipinski, Dipl.-Ing. der Nachrichtentechnik",
 title = "Frequenzhub - frequency deviation",
-howpublished = "http://www.itwissen.info/definition/lexikon/Frequenzhub-frequency-deviation.html",
-year = "Aufgerufen am 31.05.2015"
+howpublished = {http://www.itwissen.info/definition/lexikon/Frequenzhub-frequency-deviation.html},
+year = "Stand 31.05.2015"
 }
+
 
 % Bulli
 @misc{oya1987electronic,
