--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -1,11 +1,12 @@
 \section{Technisches und Formeln}
 \label{technisches}
 
+\FloatBarrier
 \subsection{Grundlegende Erläuterungen}
 \subsubsection{Auffrischung: Sinus- und Kosinusfunktion mit Parametern}
 Die einfachste Form eines Tons lässt sich durch eine Sinus- oder Kosinusschwingung beschreiben. Dabei handelt es sich mathematisch gesehen um eine Sinus- oder eine Kosinusfunktion. Beide gehören zu den trigonometrischen Funktionen, auch Winkelfunktionen genannt. Damit einige später folgende mathematische und für die FM-Synthese erforderliche Berechnungen besser verstanden werden können, wird hier kurz auf die Grundlagen zu Sinus- und Kosinus Funktionen eingegangen. 
 
-Sinus und Kosinus sind periodische Funktionen, d.h. die Funktionswerte wiederholen sich nach einer sogenannten Periode. Mathematisch ausgedrückt muss es dafür eine konstante p  geben, für die bei einem beliebigen x gilt: $f(x + p) =  f(x)$ .
+Sinus und Kosinus sind periodische Funktionen, d.h. die Funktionswerte wiederholen sich nach einer sogenannten Periode. Mathematisch ausgedrückt muss es dafür eine konstante $p$  geben, für die bei einem beliebigen x gilt: $f(x + p) =  f(x)$ .
 
 Am besten verdeutlichen kann man dies anhand des Einheitskreises. Abbildung \ref{fig:unitcircle} zeigt, wie sich Sinus und Kosinus aus den Seiten eines rechtwinkligen Dreiecks im Einheitskreis berechnen lassen:
 
@@ -31,6 +32,7 @@ $\cos(\pi) = \frac{\text{anliegende Seite}}{\text{Hypotenuse}} = \frac{b}{c} = \
 \caption{Vom Einheitskreis zum Sinus}
 \label{fig:unitcircleToSinus}
 Quelle: \url{http://www.ulrich-rapp.de/stoff/mathematik/Sinus_Einheitskreis.gif}
+\\Stand 09.06.2015
 \end{figure}
 
 Der aktuelle Winkel im Einheitskreis kann auch im sogenannten Bogenmaß angegeben werden. Das Bogenmaß beschreibt, wie weit man den Bogen des Einheitskreises im Uhrzeigersinn abgelaufen ist. Dabei ist $\pi$ die sogenannte Kreiszahl und ein Bogenmaß von $2\pi$ gibt eine ganze Umdrehung im Einheitskreis an bzw. $\pi$ dann eine halbe Umdrehung. Um nun auf eine Sinusfunktion überzuleiten, muss das Bogenmaß in Abhängigkeit von der Zeit t angegeben werden, die Formel lautet also dann $\sin(2\pi*t)$. Damit festgelegt werden kann, wie oft der Einheitskreis in einer Sekunde abgelaufen wird, multipliziert man das Bogenmaß $2\pi$ mit dem Faktor $f$. Dabei entspricht $f$ der Frequenz der Funktion, also wie viele Schwingungen in einer Sekunde durchlaufen werden. Der Wert $2\pi * f$ wird auch als Kreisfrequenz bezeichnet.
@@ -50,16 +52,17 @@ Um 90\degree oder $\frac{\pi}{2}$ verschoben gilt: 		$y(t) = y_0*\cos(2 \pi f*t)
 
 Bei $y_0$ handelt es sich um die Amplitude des Tons, also dessen Lautstärke. Alle Funktionswerte der Funktion werden mit diesem Faktor multipliziert und dadurch größer oder kleiner.
 
-F ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die Anzahl der Schwingungen (Perioden) pro Sekunde an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer ist. Die Einheit ist Hertz(Hz).
+F ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die Anzahl der Schwingungen (Perioden) pro Sekunde an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer in Sekunden ist. Die Einheit ist Hertz(Hz), also $\frac{1}{s}$.
 Je größer die Frequenz eines Tones ist, desto höher klingt er für das Ohr.
 
 Physikalisch gesehen ist ein Ton eine periodische Änderung des Luftdruckt, also Luftmoleküle die um ihre Ruhelage in Schwingung versetzt werden\cite[s. 111 f.]{zwicker}. 
 
 Für das menschliche Ohr hören sich Sinus- und Cosinusschwingungen gleich an, da diese lediglich um $\frac{1}{4}$ der Periode verschoben sind und es in der realen Welt ohnehin keine perfekten Schwingungen geben kann \cite[s. 3f.]{zwicker}. 
 
+\FloatBarrier
 \subsubsection{Parameter der FM-Synthese nach Chowning}
 
-In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen Frequenzmodulation von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben.
+In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen FM-Synthese von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben.
 
 Die Parameter werden mit der Gleichung in Sinus-Darstellung vorgestellt, d.h. Trägersignal und Modulator sind Sinusfunktionen. Dieselbe Erklärung funktioniert jedoch analog dazu auch mit Cosinus-Funktionen für den Träger und den Modulator.
 Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
