--- a/Dok/Kapitel/BesonderheitenFmSynthese.tex
+++ b/Dok/Kapitel/BesonderheitenFmSynthese.tex
@@ -155,7 +155,7 @@ Wird nun der Modulationsindex stetig erhöht, wird Energie aus der Grundfrequenz
 \begin{figure} [ht]
 \centering
   \includegraphics[width=0.5\textwidth]{Chowning_EnergieVerteilung.png}
-\caption{Beispiel zur Veranschaulichung der zunehmender Bandbreite in Abhängigkeit eines wachsenden Modulationsindex. $c$ entspricht der Trägerfrequenz, $c\pm n*m$ entspricht der n-ten Seitenfrequenz.}
+\caption{Beispiel zur Veranschaulichung der zunehmender Bandbreite in Abhängigkeit eines wachsenden Modulationsindex. $c$ entspricht der Trägerfrequenz; $c\pm n*m$ entspricht der n-ten Seitenfrequenz.}
 \label{fig:chowningEnergieVerteilung}
 Quelle: \cite{chowningPaper}
 \end{figure}
