more small changes

--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -7,7 +7,7 @@ Die Frequenzmodulationssynthese ist eine für die Musikwelt sehr wichtige Anwend
 Die momentane Amplitude des modulierten Signals lässt sich durch folgende Formel beschreiben:
 
 \[
-e(t) = A\sin(\alpha t + I\sin(\beta t)) \cite{chowningPaper}
+\bm{e(t) = A\sin(\alpha t + I\sin(\beta t))} \cite{chowningPaper}
 \]
 
 Bei der äußeren Sinusfunktion handelt es sich um das Trägersignal, welches in seiner Frequenz durch das Modulationssignal (Innerer Sinus) moduliert wird.
@@ -28,7 +28,7 @@ Praktisch gesehen kann die Frequenzmodulationssynthese dazu verwendet werden, um
 
 \subsection{Beispiele}
 In diesem Kapitel werden einige konkrete Beispiele der FM-Synthese anhand von Träger- und Modulationsfunktion sowie der daraus resultierenden Funktion aufgezeigt. Die Grafiken zeigen jeweils Plots von allen drei Signalen, welche mit Matlab erzeugt wurden.
-Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen der vom menschlichen Ohr wargenommen werden kann. (Siehe Unterkapitel ``\ref{}'' im Kapitel ``\ref{}).
+Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen der vom menschlichen Ohr wargenommen werden kann. (Siehe Unterkapitel ``\nameref{bulli:ohrToeneUndFrequenzen}'').
 
 \begin{figure} [ht]
 \centering
