--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -12,6 +12,7 @@
 \usepackage{gensymb}
 \usepackage[section]{placeins}
 \usepackage[export]{adjustbox}
+\usepackage{bm}
 \usepackage{listings}
 \lstset{
 	 literate={ö}{{\"o}}1 	%Replaces "oe","ae" usw. with \o to use "Umlaute" in listings
