fixed matze bugs ;)

--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -46,7 +46,7 @@ Zum Vergleich Wellenform und Frequenzspektrum für zwei Träger (220 und 370), d
 
 \paragraph{Einzelner Träger mit parallel geschaltetem Modulatorenpaar 1 S}$\;$
 
-Wird ein einzelner Träger T von zwei parallel geschalteten Modulatoren M1 und M2 moduliert, kann das erzeugte Frequenzspektrum nicht mehr einfach als Summe der Spektren zweier einfacher FM begriffen werden, da sich die Auswirkungen der beiden Modulatoren auf den Träger gegenseitig beeinflussen und zahlreiche \texit{Kombinationsseitenfrequenzen} (CHOWNING)oder \textit{Intermodulationsfrequenzen]} (SCHOTTSTAEDT) entstehen. Das ist bereits aus der Formel für diese Spielart des FM direkt ersichtlich, die analog zu \ref{eq:SimpleFM} wie folgt lautet:
+Wird ein einzelner Träger T von zwei parallel geschalteten Modulatoren M1 und M2 moduliert, kann das erzeugte Frequenzspektrum nicht mehr einfach als Summe der Spektren zweier einfacher FM begriffen werden, da sich die Auswirkungen der beiden Modulatoren auf den Träger gegenseitig beeinflussen und zahlreiche \textit{Kombinationsseitenfrequenzen} (CHOWNING)oder \textit{Intermodulationsfrequenzen]} (SCHOTTSTAEDT) entstehen. Das ist bereits aus der Formel für diese Spielart des FM direkt ersichtlich, die analog zu \ref{eq:SimpleFM} wie folgt lautet:
 \begin{equation}
 f_{FMmodpar}(t) = \sin(w_ct + I_1\sin(w_{m1}t) + I\sin(w_{m2}t))
 \end{equation}
@@ -65,10 +65,11 @@ Substituiert man hier mit \ref{eq:Besselsin} und \ref{eq:Besselcos}, und wendet 
 
 \subsubsection{Kaskadenschaltung}
 
-\subsubsubsection{Einzelner Träger mit in Reihe geschaltetem Modulatorenpaar 2 S}
+\paragraph{Einzelner Träger mit in Reihe geschaltetem Modulatorenpaar 2 S}
 
 \subsubsection{Komplexe Soundsynthese mit Native Instruments' \textit{FM8}}
 
-\subsubsubsection{Die FM-Matrix 1,5 S}
+\paragraph{Die FM-Matrix 1,5 S}
 
-\subsubsubsection{ADSR-Hüllkurven-Generator 0,5 S}
+
+\paragraph{ADSR-Hüllkurven-Generator 0,5 S}
