--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -1,5 +1,4 @@
 \section{Technisches und Formeln}
-\label{technisches}
 
 \FloatBarrier
 \subsection{Grundlegende Erläuterungen}
@@ -61,6 +60,7 @@ Für das menschliche Ohr hören sich Sinus- und Cosinusschwingungen gleich an, d
 
 \FloatBarrier
 \subsubsection{Parameter der FM-Synthese nach Chowning}
+\label{chowningparameter}
 
 In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen FM-Synthese von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben.
 
