--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -1,6 +1,6 @@
-\subsection{Praktische Anwendung der FM-Synthese}
+\section{Praktische Anwendung der FM-Synthese}
 \FloatBarrier
-\subsubsection{Nachbildung eines Instruments}
+\subsection{Nachbildung eines Instruments}
 Da es bei der FM Synthese schwer ist im Vorfeld zu wissen was für ein Spektrum durch die Synthese erzeugt wird, ist es schwer und benötigt einige Experimente um mit dieser Technik ein echt wirkendes Instrument nachzubilden.
 Trotzdem gibt es einige Methoden den generierten Klang natürlicher wirken zu lassen. Diese werden im weiteren Verlauf diese Kapitels vorgestellt und anschließend versucht den Klang eines Tones einer Querflöte nachzubilden.
 
@@ -141,6 +141,6 @@ Feedback FM
 xn = wn *sin[(2*pi*f1n/SR)+(B*xn-1/wn-1)]
 
 \FloatBarrier
-\subsubsection{Modulationsframework (Theorie -> Praxis)}
+\subsection{Modulationsframework (Theorie -> Praxis)}
 \FloatBarrier
-\subsubsection{Demo: Parameter und Effekte - Grafiken (evtl. Plotten)}
+\subsection{Demo: Parameter und Effekte - Grafiken (evtl. Plotten)}
