Added \newpage before introduction chapter

--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -1,5 +1,5 @@
+\newpage
 \section{Einführung}
-
 \FloatBarrier
 \subsection{Prinzip der FM-Synthese}
 Die \textbf{Frequenzmodulationssynthese} ist eine für die Musikwelt sehr wichtige Anwendung der \textbf{Frequenzmodulation (FM)}, welche bereits aus der Nachrichtentechnik bekannt ist. Generell wird dabei die Frequenz eines Trägersignals durch ein weiteres Modulationssignal verändert, die Amplitude bleibt jedoch unangetastet. Bei der FM-Synthese kann sich in besonderen Fällen jedoch auch die Amplitude des Modulierten Signals von dem ursprünglichen Trägersignals unterscheiden. In der Nachrichtentechnik können durch die unterschiedlichen Frequenzen im modulierten Trägersignal Informationen übertragen werden. 
@@ -26,6 +26,7 @@ Die Frequenzmodulationssynthese ist in ihren Grundzügen recht einfach zu verste
 
 Praktisch gesehen kann die Frequenzmodulationssynthese dazu verwendet werden, um zum Einen Klangbilder echter Instrumente nachzubilden, jedoch auch um ganz neue Töne zu erzeugen die so in der realen Welt nicht vorkommen.
 
+\FloatBarrier
 \subsection{Beispiele}
 In diesem Kapitel werden einige konkrete Beispiele der FM-Synthese anhand von Träger- und Modulationsfunktion sowie der daraus resultierenden Funktion aufgezeigt. Die Grafiken zeigen jeweils Plots von allen drei Signalen, welche mit Matlab erzeugt wurden.
 Die Frequenzen der jeweiligen Funktionen wurden so gewählt, dass sie in einem Frequenzbereich liegen der vom menschlichen Ohr wargenommen werden kann. (Siehe Unterkapitel ``\ref{bulli:ohrToeneUndFrequenzen} - \nameref{bulli:ohrToeneUndFrequenzen}'').
