Made lots of texts bold

--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -20,7 +20,8 @@
            {ü}{{\"u}}1
 	{ß}{{\ss}}1
 	{=}{$\rightarrow{}$}{1},
-  	breaklines=true,                % sets automatic line breaking
+  	breaklines=true,                		% sets automatic line breaking
+	moredelim=[is][\bfseries]{[*}{*]},   	% enable bold style with "[*text*]" in lstlisting
 	columns=flexible
 }
 
